modified GetCars controller
